simplified video element in VideoPlayer Component

--- a/sport_video_tagging_player/src/index.html
+++ b/sport_video_tagging_player/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html:5>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Video Player for Playback of live tagged Sports Videos</title>
